# moe-kernels

./: CMakeLists.txt  MANIFEST.in  flake.nix  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
csrc/: activation_kernels.cu
csrc/core/: scalar_type.hpp
csrc/moe/: marlin_moe_ops.cu  moe_align_sum_kernels.cu  moe_ops.h  topk_softmax_kernels.cu  torch_bindings.cpp
csrc/moe/marlin_kernels/: marlin_moe_kernel.h  marlin_moe_kernel_ku4.cu  marlin_moe_kernel_ku4.h  marlin_moe_kernel_ku4b8.cu  marlin_moe_kernel_ku4b8.h  marlin_moe_kernel_ku8b128.cu  marlin_moe_kernel_ku8b128.h
csrc/quantization/: vectorization.cuh
csrc/quantization/fp8/: common.cu  common.cuh
csrc/quantization/fp8/amd/: quant_utils.cuh
csrc/quantization/fp8/nvidia/: quant_utils.cuh
moe_kernels/: _fused_marlin_moe.py  fp8_utils.py  fused_marlin_moe.py  fused_moe.py  platforms.py
moe_kernels/_ops/: __init__.pyi
